[gd_scene load_steps=6 format=2]

[ext_resource path="res://Control Assets/Hovered.tres" type="StyleBox" id=1]
[ext_resource path="res://Control Assets/Relic.gd" type="Script" id=2]
[ext_resource path="res://Control Assets/Default Button.tres" type="StyleBox" id=3]
[ext_resource path="res://Fonts/Lora-Bold.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 18
font_data = ExtResource( 4 )

[node name="Relic" type="Button"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -874.0
margin_bottom = -450.0
custom_fonts/font = SubResource( 1 )
custom_styles/hover = ExtResource( 1 )
custom_styles/normal = ExtResource( 3 )
text = "RELIC 1 "
script = ExtResource( 2 )

[connection signal="mouse_entered" from="." to="." method="_on_Relic_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Relic_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_Relic_pressed"]
